# grandjury

./: CONTRIBUTING.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  rd-community-pr-merged.yml
challenges/: README.md  TEMPLATE.md  astra-builds.md
examples/: jupyter_analysis.py  quickstart.py
grandjury/: __init__.py  sdk.py
tests/: test_sdk.py
