[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grandjury"
version = "1.2.0"
description = "GrandJury SDK — submit LLM traces for human evaluation + analytics client"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "GrandJury Team", email = "support@grandjury.com"},
]
keywords = ["ai", "evaluation", "collective-intelligence", "model-scoring", "api-client"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "requests>=2.25.0",
]

[project.optional-dependencies]
pandas = [
    "pandas>=1.3.0",
]
polars = [
    "polars>=0.15.0",
]
parquet = [
    "pyarrow>=6.0.0",
]
fast = [
    "msgspec>=0.14.0",
]
async = [
    "httpx>=0.24",
]
all = [
    "pandas>=1.3.0",
    "polars>=0.15.0",
    "pyarrow>=6.0.0",
    "msgspec>=0.14.0",
    "httpx>=0.24",
]
dev = [
    "build>=0.10.0",
    "twine>=4.0.0",
    "pytest>=7.0.0",
    "jupyter>=1.0.0",
    "pandas>=1.3.0",
    "polars>=0.15.0",
    "pyarrow>=6.0.0",
    "msgspec>=0.14.0",
]

[project.urls]
Homepage = "https://github.com/humanjudge/grandjury"
Repository = "https://github.com/humanjudge/grandjury.git"
"Bug Tracker" = "https://github.com/humanjudge/grandjury/issues"

[tool.hatch.build.targets.wheel]
packages = ["grandjury"]

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "twine>=6.1.0",
]
